--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,25 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
+<!-- left start -->
+<aside>
+</aside>
+<!-- left end -->
+
+
+<!-- main start -->
+<main>
+</main>
+<!-- main end -->
+
+
+<!-- right start -->
+<div class="right">
+</div>
+<!-- right end -->
+
+</div>
 <script src="script.js"></script>
 </body>
 </html>
