--- a/dashboard.html
+++ b/dashboard.html
@@ -53,13 +53,23 @@
 </a>
 </div>
 <!-- sidebar end -->
-
 </aside>
 <!-- left end -->
 
 
 <!-- main start -->
 <main>
+<div class="dash">
+<h1>Dashboard</h1>
+</div>
+<div class="todo">
+<h2><span class="material-symbols-outlined">format_list_bulleted</span>&ensp;To-Do List</h2>
+<div class="row">
+<input type="text" id="input-box" placeholder="Add your task">
+<button onclick="addTask()">Add</button>
+</div>
+<ul id="list-container">
+</ul>
 </main>
 <!-- main end -->
 
