adding the calendar

--- a/dashboard.html
+++ b/dashboard.html
@@ -76,6 +76,17 @@
 
 <!-- right start -->
 <div class="right">
+<div class="profile-photo">
+<a href="https://accounts.google.com/">
+<h1>My Profile</h1>
+<img src="images/pfp.png">
+</a>
+</div>
+<div class="calendar">
+  <h3 id="month-year"></h3>
+  <div class="days" id="days"></div>
+</div>
+
 </div>
 <!-- right end -->
 
