--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,9 @@
   <h3 id="month-year"></h3>
   <div class="days" id="days"></div>
 </div>
-
+<div class="clock" id="clock">
+00:00:00
+</div>
 </div>
 <!-- right end -->
 
