--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,7 @@
 <div class="dash">
 <h1>Dashboard</h1>
 </div>
+<div class="main-content">
 <div class="todo">
 <h2><span class="material-symbols-outlined">format_list_bulleted</span>&ensp;To-Do List</h2>
 <div class="row">
@@ -70,16 +71,36 @@
 </div>
 <ul id="list-container">
 </ul>
+</div>
+<div class="sticky" id="sticky">
+<h2>Sticky Notes &ensp;<button onclick="addNote()">+</button></h2>
+<ul id="image-container"></ul>
+</div>
+</div>
 </main>
 <!-- main end -->
 
 
 <!-- right start -->
 <div class="right">
+<div class="profile-photo">
+<a href="https://accounts.google.com/">
+<h1>My Profile</h1>
+<img src="images/pfp.png">
+</a>
+</div>
+<div class="calendar">
+  <h3 id="month-year"></h3>
+  <div class="days" id="days"></div>
+</div>
+<div class="clock" id="clock">
+00:00:00
+</div>
 </div>
 <!-- right end -->
 
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
