image source changes

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
 <div class="profile-photo">
 <a href="https://accounts.google.com/">
 <h1>My Profile</h1>
-<img src="images/pfp.png">
+<img src="https://avatarfiles.alphacoders.com/126/thumb-1920-126700.jpg">
 </a>
 </div>
 <div class="calendar">
